# mkdocstrings-github

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  action.yaml  latest  mkdocs.yml  pyproject.toml  pytest.xml  test  versions.json  zensical.toml
.github/: CONTRIBUTING.md  renovate.json5
.github/workflows/: docs.yaml  example_workflow.yml  qualify.yaml  release.yaml
docs/: changelog.md  credits.md  index.md
docs/usage/: general.md  headings.md  index.md  parameters.md  signatures.md
pr-hostname/: 404.html  index.html  objects.inv  sitemap.xml
pr-hostname/changelog/: index.html
pr-hostname/contributing/: index.html
pr-hostname/credits/: index.html
pr-hostname/license-page/: index.html
pr-hostname/search/: search_index.json
pr-hostname/usage/: index.html
pr-hostname/usage/general/: index.html
pr-hostname/usage/headings/: index.html
pr-hostname/usage/parameters/: index.html
pr-hostname/usage/signatures/: index.html
src/mkdocstrings_handlers/github/: __init__.py  config.py  handler.py  objects.py  rendering.py
src/mkdocstrings_handlers/github/templates/material/: _macros.html.jinja  action.html.jinja  heading.html.jinja  inputs.html.jinja  outputs.html.jinja  secrets.html.jinja  style.css  workflow.html.jinja
test/: conftest.py  helpers.py  test_coverage.py  test_end_to_end.py  test_handler.py  test_render_action.py  test_render_workflow.py  test_signature_ref.py
test/snapshots/: __init__.py
test/snapshots/__inline_snapshot__/__init__/__module__/: 037d80cd-da83-4d19-8888-e7f9390b550b.html  063645f0-29c6-4f7f-b2f3-5a9d2c793666.html  0ac97022-7141-4bb9-a8d3-4bdcbdb70c74.html  17188464-b5ec-4710-9343-dbf3781e9e30.html  1dd1041a-d181-4982-836f-ed1c1940c821.html  27f2c7bb-b035-4ccb-ab04-c5796ebaedc9.html  34497817-1e3c-460c-a14b-6f51cb376504.html  (+5 more)
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/changelog/: index.html
v0.1.0/contributing/: index.html
v0.1.0/credits/: index.html
v0.1.0/license-page/: index.html
v0.1.0/search/: search_index.json
v0.1.0/usage/: index.html
v0.1.0/usage/general/: index.html
v0.1.0/usage/headings/: index.html
v0.1.0/usage/parameters/: index.html
v0.1.0/usage/signatures/: index.html
v0.2.*/: 404.html  index.html  sitemap.xml
v0.2.*/changelog/: index.html
v0.2.*/contributing/: index.html
v0.2.*/credits/: index.html
v0.2.*/license-page/: index.html
v0.2.*/search/: search_index.json
v0.2.*/usage/: index.html
v0.2.*/usage/general/: index.html
v0.2.*/usage/headings/: index.html
v0.2.*/usage/parameters/: index.html
v0.2.*/usage/signatures/: index.html
v0.3.*/: 404.html  index.html  sitemap.xml
v0.3.*/changelog/: index.html
v0.3.*/contributing/: index.html
v0.3.*/credits/: index.html
v0.3.*/license-page/: index.html
v0.3.*/search/: search_index.json
v0.3.*/usage/: index.html
v0.3.*/usage/general/: index.html
v0.3.*/usage/headings/: index.html
v0.3.*/usage/parameters/: index.html
v0.3.*/usage/signatures/: index.html
v0.4.*/: 404.html  index.html  sitemap.xml
v0.4.*/assets/: _mkdocstrings.css
v0.4.*/changelog/: index.html
v0.4.*/contributing/: index.html
v0.4.*/credits/: index.html
v0.4.*/license-page/: index.html
v0.4.*/search/: search_index.json
v0.4.*/usage/: index.html
v0.4.*/usage/general/: index.html
v0.4.*/usage/headings/: index.html
v0.4.*/usage/parameters/: index.html
v0.4.*/usage/signatures/: index.html
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.0/changelog/: index.html
v0.4.0/contributing/: index.html
v0.4.0/credits/: index.html
v0.4.0/license-page/: index.html
v0.4.0/usage/: index.html
v0.4.0/usage/general/: index.html
v0.4.0/usage/headings/: index.html
v0.4.0/usage/parameters/: index.html
v0.4.0/usage/signatures/: index.html
v0.4.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.1/changelog/: index.html
v0.4.1/contributing/: index.html
v0.4.1/credits/: index.html
v0.4.1/license-page/: index.html
v0.4.1/search/: search_index.json
v0.4.1/usage/: index.html
v0.4.1/usage/general/: index.html
v0.4.1/usage/headings/: index.html
v0.4.1/usage/parameters/: index.html
v0.4.1/usage/signatures/: index.html
v0.4.2/: 404.html  index.html  sitemap.xml
v0.4.2/changelog/: index.html
v0.4.2/contributing/: index.html
v0.4.2/credits/: index.html
v0.4.2/license-page/: index.html
v0.4.2/usage/: index.html
v0.4.2/usage/general/: index.html
v0.4.2/usage/headings/: index.html
v0.4.2/usage/parameters/: index.html
v0.4.2/usage/signatures/: index.html
v0.5.*/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.*/changelog/: index.html
v0.5.*/contributing/: index.html
v0.5.*/credits/: index.html
v0.5.*/license-page/: index.html
v0.5.*/search/: search_index.json
v0.5.*/usage/: index.html
v0.5.*/usage/general/: index.html
v0.5.*/usage/headings/: index.html
v0.5.*/usage/parameters/: index.html
v0.5.*/usage/signatures/: index.html
v0.6.*/: 404.html  index.html  objects.inv  sitemap.xml
v0.6.*/assets/: _mkdocstrings.css
v0.6.*/changelog/: index.html
v0.6.*/contributing/: index.html
v0.6.*/credits/: index.html
v0.6.*/license-page/: index.html
v0.6.*/search/: search_index.json
v0.6.*/usage/: index.html
v0.6.*/usage/general/: index.html
v0.6.*/usage/headings/: index.html
v0.6.*/usage/parameters/: index.html
v0.6.*/usage/signatures/: index.html
v0.7.*/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.*/changelog/: index.html
v0.7.*/contributing/: index.html
v0.7.*/credits/: index.html
v0.7.*/license-page/: index.html
v0.7.*/search/: search_index.json
v0.7.*/usage/: index.html
v0.7.*/usage/general/: index.html
v0.7.*/usage/headings/: index.html
v0.7.*/usage/parameters/: index.html
v0.7.*/usage/signatures/: index.html
