[project]
name = "mkdocstrings-github"
version = "0.0.0"
description = "A GitHub Action handler for mkdocstrings"
authors = [
    { name = "Mark Hu", email = "watermarkhu@gmail.com" }
]
license =  { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10, <3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "gitpython>=3.1.45,<4",
    "mkdocstrings>=1,<2",
    "ruamel.yaml>=0.18.16,<1",
    "ruamel.yaml.clib>=0.2.12,<1",
    "typing-extensions>=4.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "ty~=0.0.23",
    "ruff~=0.15.0",
    "prek>=0.2.1",
    "pydantic~=2.12",
    "pytest~=9.0.0",
    "pytest-cov~=7.1.0",
    "beautifulsoup4>=4.13.3",
    "inline-snapshot~=0.32.0",
]
docs = [
    "griffe-pydantic>=1.3.1",
    "mkdocstrings-python~=2.0.0",
    "zensical>=0.0.15",
]
mkdocs = [
    "griffe-pydantic>=1.3.1",
    "jsbeautifier>=1.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-panzoom-plugin~=0.5.2",
    "mkdocs-mermaid2-plugin~=1.2.3",
    "mkdocstrings-python~=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "docs"]
managed = true

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # Python specific errors
    "W",  # Warnings
    "F",  # Pyflakes (code complexity)
    "I",  # isort
]
ignore = [
    "E501",  # Line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.inline-snapshot]
test-dir = "test"
storage-dir = "test/snapshots"
format-command = "ruff format --config pyproject.toml --stdin-filename {filename}"
default-flags=["trim"]

[tool.ty.src]
include = ["src"]
exclude = ["test"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocstrings_handlers"]

[tool.pytest.ini_options]
pythonpath = [
    "test"
]
markers = [
    "without_repo",
    "github_actions"
]
